worked nav-bar issue, break in code at 600px

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -71,7 +71,7 @@ table {
     width: 100%;
     height: 90px;
     font-size: 18px;
-    /* border-bottom: 1px solid whitesmoke; */
+    
     display: flex;
     justify-content: center;
     align-items: center; 
@@ -80,19 +80,11 @@ table {
   }
    .header {
     
-    flex-direction: column;
     flex-wrap: wrap;
+      font-size: 18px;
      
   }
-   /* img.bg { 
-    min-height: 100%;
-    min-width: 1024px;
-    width: 100%;
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-  }  */
+  
   
   .footer-container {
     width: 100%;
@@ -130,6 +122,10 @@ table {
       
       color: black;
       height: 18px;
+    }
+    .header {
+      flex-wrap: wrap;
+      font-size: 26px;
     }
    
   .footer-container {
